@@ -10301,6 +10301,28 @@ HXQUOTE_LDAPFLT
  RFC 4515, to make it suitable for use in an LDAP search filter.
 \end_layout
 
+\begin_layout Description
+
+\family typewriter
+HXQUOTE_LDAPRDN
+\family default
+
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+HXQUOTE_LDAPRDN
+\end_layout
+
+\end_inset
+
+ Escape the string using backslash-plus-hexcode notation as described in
+ RFC 4514, to make it suitable for use in an LDAP Relative Distinguished
+ Name.
+\end_layout
+
 \begin_layout Standard
 If 
 \family typewriter
