@@ -22,6 +22,7 @@ enum {
 	HXQUOTE_DQUOTE,
 	HXQUOTE_HTML,
 	HXQUOTE_LDAPFLT,
+	HXQUOTE_LDAPRDN,
 	_HXQUOTE_MAX,
 };
 
